Fix visibility of dish list when ingredient list is filtered

--- a/public/src/components/ui-Checkout/basket.css
+++ b/public/src/components/ui-Checkout/basket.css
@@ -35,11 +35,15 @@
  */
 .step-items .dishes {
 	opacity: 1;
+	visibility: visible;
 	max-height: 100%;
 	overflow-y: auto;
-	transition: opacity .3s ease-in-out;
+	transition: opacity .3s ease-in-out, visibility .3s ease-in-out;
 }
-.step-items .show-ingredients .dishes { opacity: 0; }
+.step-items .show-ingredients .dishes {
+	opacity: 0;
+	visibility: hidden;
+}
 
 .step-items .collection-item.dish { transition-duration: .2s; }
 .step-items .dish:hover { background-color: #ffab40; }
